--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,18 +12,14 @@
   </head>
   <body>
     <header>
-      {{!-- <h1>
-        <a href="/">Just Tech News</a>
-      </h1>
-      <nav>
-        <a href="/login">login</a>
-      </nav> --}}
-    </header>
-    <main>
-      {{{ body }}}
+    <h1>
+      <a href="/">Just Tech News</a>
+    </h1>
+    <nav>
+      <a href="/login">login</a>
+    </nav>
+  </header>
     </main>
-    <footer>
-
-    </footer>
+    <footer> The Breakfast App </footer>
       
   </body>
