--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,22 +1,36 @@
 <body style="background-image: url(../images/smoothie-bowl.jpg); background-size: cover;">
     <div class="container d-flex align-items-center justify-content-center">
       <form style="margin-top: 80px;" class="">
+<!-- Sign-in tab -->
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+          <form action="sign-in" class="sign-in-form">
+            <label for="exampleInputEmail1" class="form-label">Email address</label><br>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"><br>
+            <label for="password">Password</label><br>
+            <input type="text" name="password" id="password-login"><br>
+            <br>
+            <button class="btn btn-primary mt-3" type="submit">Login</button><br>
+          </form>
+          <br>
         </div>
         <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
+          <form action="signup" class="signup-form"></form>
+            <label for="exampleInputEmail1" class="form-label">Email address</label><br>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"><br>
+            <label for="password">Password</label><br>
+            <input type="text" name="password" id="password-signup"><br>
+            <br>
+            <button class="btn btn-primary mt-3" type="submit">Sign Up</button><br>
         </div>
-        <div class="d-grid gap-2 col-6 mx-auto">
-          <button type="submit" class="btn btn-secondary">Submit</button>
-        </div>
-      </form>
-    </div>
+       </form>
+       <br>
+      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
 
+    </div>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
   </body>
+
+<script src="/javascript/login.js"></script>
+<script src="/javascript/signup.js"></script>
