--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,23 +7,32 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/public/assets/css/">
+    
     <title>The Breakfast App</title>
   </head>
   <body>
-    <header>
-      {{!-- <h1>
-        <a href="/">Just Tech News</a>
-      </h1>
-      <nav>
-        <a href="/login">login</a>
-      </nav> --}}
+    <header style="background-image: url('/assets/images/breakfast-pic.jpg');" class="py-3 mb-3">
+      <div class="flex-row justify-space-between align-center container-fluid mx-auto">
+        <h1 class="text-dark bg-transparent p-3">The Breakfast App</h1>
+        <h3 class="text-dark bg-transparent p-3"></h3>
+      </div>
     </header>
     <main>
+      <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+        {{#if loggedIn}}
+        <button id="logout" class="btn btn-primary">logout</button>
+        {{else}}
+        <a href="/login" class="btn btn-primary me-md-2" type="button">Login</a>
+        <a href="/signup" class="btn btn-primary" type="button">Signup</a>
+        {{/if}}
+    </div>
       {{{ body }}}
     </main>
     <footer>
-
+      
     </footer>
       
   </body>
+    {{#if loggedIn}}
+    <script src="/javascript/logout.js"></script>
+    {{/if}}
