--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,14 +1,17 @@
 <body>
     <div class="container d-flex align-items-center justify-content-center">
-      <form style="margin-top: 80px;" class="login-form">
+      <form class="signup-form" style="margin-top: 80px;">
+        <div class="mb-3">
+          <label for="username-signup" class="form-label">Username</label>
+          <input type="username" class="form-control" id="username-signup">
+        </div>
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="email-login" aria-describedby="emailHelp">
-          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+          <input type="email" class="form-control" id="email-signup">
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="password-login">
+          <input type="password" class="form-control" id="password-signup">
         </div>
         <div class="d-grid gap-2 col-6 mx-auto">
           <button type="submit" class="btn btn-secondary">Submit</button>
@@ -18,5 +21,5 @@
 
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="/javascript/login.js"></script>
+    <script src="/javascript/signup.js"></script>
   </body>
